# warp-boats

./: .gitignore  Cargo.toml
migrations/2023-09-16-152239_create_boats/: down.sql  up.sql
migrations/2023-09-26-164659_create_users/: up.sql
src/: config.rs  consts.rs  credit.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  rate_limiting.rs  responses.rs  routes.rs  schema.rs
src/handlers/: boat.rs  helpers.rs  jwt.rs  mod.rs  user.rs
src/models/: boat.rs  jwt.rs  mod.rs  user.rs
src/routes/: boat.rs  filters.rs  jwt.rs  mod.rs  user.rs
