[package]
name = "rustic-api"
version = "0.1.0"
edition = "2021"
license="MIT"
authors = ["Oliver Wortley"]
description="Rust Boats API"

[dependencies]
config = "0.13.3"
diesel = { version = "2.1.1", features = ["sqlite", "r2d2"] }
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.106"
tokio = {version = "1.32.0", features = ["macros", "sync", "rt-multi-thread"]}
warp = "0.3.5"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
anyhow = "1.0.75"
thiserror = "1.0.48"
jsonwebtoken = "8.3.0"
chrono = "0.4.31"
uuid = { version = "1.4.1", features = ["v4"] }
governor = "0.6.0"
